PBI-1114 Fix Start Date width Squashed commit of the following
commit 4828c8e6 
Author: Serhiy Posokhin <serhiy.posokhin@authoritypartners.com> 
Date: Wed May 19 2021 10:28:11 GMT+0300 (Eastern European Summer Time) 

    PBI-1114 Fix Start Date width

--- a/src/pages/external-access/appointment/reschedule/appointment-reschedule.scss
+++ b/src/pages/external-access/appointment/reschedule/appointment-reschedule.scss
@@ -3,3 +3,7 @@
     width: 8.5rem;
   }
 }
+
+.start-date {
+  max-width: 12rem;
+}
